# pmp-library

./: CHANGELOG.md  CMakeLists.txt  archive.html  classpmp_1_1_mesh_viewer-members.html  classpmp_1_1_mesh_viewer.html  classpmp_1_1_surface_factory-members.html  classpmp_1_1_surface_factory.html  classpmp_1_1_surface_mesh-members.html  classpmp_1_1_surface_mesh.html  classpmp_1_1_surface_mesh_g_l-members.html  classpmp_1_1_surface_mesh_g_l.html  classpmp_1_1_surface_mesh_g_l.js  functions_c.html  functions_func_c.html  functions_func_l.html  functions_func_p.html  functions_func_s.html  functions_l.html  functions_p.html  functions_s.html  group__visualization.js  index.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js
2019/02/16/: license-changed.html
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_a.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_16.js  functions_17.js  functions_2.js  functions_3.js  functions_4.js  (+41 more)
src/polygon-laplacian/: CMakeLists.txt  GeodesicsInHeat.cpp  GeodesicsInHeat.h  MeanCurvature.cpp  MeanCurvature.h  PolyDiffGeo.cpp  PolyDiffGeo.h  Smoothing.cpp  Smoothing.h  Viewer.cpp  Viewer.h  main.cpp  run_tests.cpp
(+8 files in other folders)
